@@ -12,6 +12,9 @@ major-ish code restructure
 players now allowed to resign even when not their turn
 players can now delete a game if they created it (or if not started & the person who joined left)
 added partial-name matching for games
+added option to highlight last move
+- board definition can manually set material with "highlight"
+boards are now redrawn on load (if style changed / worldedit mistakes)
 
 
 v0.2.2 (18 Jul 2011)
